cabal-version: 2.4
name: eff
version: 0.0.0.0
category: Control
build-type: Simple

author: Alexis King
maintainer: Alexis King <lexi.lambda@gmail.com>
homepage: https://github.com/hasura/eff
bug-reports: https://github.com/hasura/eff/issues

license: ISC
copyright: 2019 Hasura, Alexis King

source-repository head
  type: git
  location: https://github.com/hasura/eff

flag debug
  description:
    Enables some additional internal consistency checking at the cost of a small performance
    overhead. This may be useful if you find yourself getting segfaults or similarly dire badness,
    but is otherwise unlikely to be helpful.
  default: False
  manual: True

common common
  ghc-options:
    -flate-specialise
    -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints

  if flag(debug)
    ghc-options: -fno-ignore-asserts -falignment-sanitisation -fcatch-bottoms
    cpp-options: -DEFF_DEBUG

  build-depends:
    , base >=4.14 && <5
    , natural-transformation ^>=0.4
    -- , transformers <1
    -- , transformers-base <1
    , primitive >=0.6.2 && <0.8

  default-language: Haskell2010
  default-extensions:
    ApplicativeDo BangPatterns BlockArguments ConstraintKinds DataKinds DefaultSignatures
    DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable
    DerivingStrategies DerivingVia EmptyCase ExistentialQuantification FlexibleContexts
    FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs
    KindSignatures LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns OverloadedStrings
    PatternSynonyms QuantifiedConstraints RankNTypes RoleAnnotations ScopedTypeVariables
    StandaloneDeriving StandaloneKindSignatures TupleSections TypeApplications TypeFamilies
    TypeFamilyDependencies TypeOperators UnliftedNewtypes ViewPatterns

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Control.Effect
    Control.Effect.Internal
    Control.Effect.Internal.Continuation
    Control.Effect.Internal.Debug
    Control.Effect.Internal.Equality
    Control.Effect.Internal.PrimArray
    Control.Effect.Internal.SmallArray

test-suite eff-tests
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Control.EffectSpec

  if flag(debug)
    ghc-options: -debug -with-rtsopts=-DS

  build-depends:
    , eff
    , hspec >=2 && <3
  build-tool-depends:
    , hspec-discover:hspec-discover >=2 && <3
